syntax = "proto3";

// Support for nullable values.
import "google/protobuf/wrappers.proto";

option java_package = "com.bytecause.nautichart";
option java_multiple_files = true;

message RecentlySearchedPlace {
  int64 placeId = 1;
  double latitude = 2;
  double longitude = 3;
  string name = 4;
  string displayName = 5;
  string type = 6;
  int64 timeStamp = 7;
}

message RecentlySearchedPlaceList {
  repeated RecentlySearchedPlace place = 1;
}